retrieveUnpackaged/objects/Catalog_Order__c.object
<CustomObject>
    <description>A Catalog Order for use with the Catalog mobile app.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Catalog Orders</relationshipLabel>
        <relationshipName>Catalog_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Items__c</fullName>
        <description>Counts the items in the line items.</description>
        <label># Items</label>
        <summarizedField>Catalog_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines__c</fullName>
        <description>Counts the number of discrete line items.</description>
        <label># Lines</label>
        <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cart</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Sums the Subtotals from the line items.</description>
        <label>Total Cost</label>
        <summarizedField>Catalog_Line_Item__c.Subtotal__c</summarizedField>
        <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Catalog Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Catalog Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>